Fixed Header Die Shadows, adjusted page spacing, centered content

--- a/index.css
+++ b/index.css
@@ -7,6 +7,7 @@
     --headerbackground: #FFC65D;
     --darktext: black;
     --lighttext: white;
+    --offblack: rgba(0,0,0,.5);
     --button: #D18700;
     --buttonhover:#FFA500;
 }
@@ -17,7 +18,7 @@ html, body, body *{
     flex-direction: column;
     box-sizing: border-box;
     font-family: 'Roboto';
-    line-height: 1.2;
+    line-height: 1.4;
     margin: 0;
     padding: 0;
 }
@@ -30,9 +31,9 @@ script{
 
 /* Header */
 .main-header{
-    border-bottom: 1px solid rgba(0,0,0,.5);
+    border-bottom: 1px solid var(--offblack);
     background: var(--headerbackground);
-    box-shadow: inset 2px 2px 10px rgba(0,0,0,.5);
+    box-shadow: inset 2px 2px 10px var(--offblack);
     text-align: center;
     margin-bottom: 20px;
 }
@@ -42,9 +43,9 @@ script{
     align-items: center;
 }
 .top-die{
-    font-size: 50px;
+    font-size: 68px;
     color: var(--lighttext);
-    text-shadow: 1px -1px 1px rgba(0,0,0,.5);
+    text-shadow: 0px 2px 1px var(--offblack);
     transform: rotate(-23deg);
 }
 .left-top-die{
@@ -52,7 +53,7 @@ script{
 }
 .page-title-large{
     font-size: 36px;
-    margin: 10px 5vw;
+    margin: 10px 3vw;
 }
 .page-subtitle-large{
     font-size: 20px;
@@ -64,13 +65,13 @@ script{
 }
 .main-nav a{
     color: inherit;
-    text-shadow: 0px 1px 1px rgba(0,0,0,.5);
+    text-shadow: 0px 1px 1px var(--offblack);
     text-decoration: none;
 }
 .button{
     color: var(--lighttext);
     background:var(--button);
-    border: 1px solid rgba(0,0,0,.5);
+    border: 1px solid var(--offblack);
     border-radius: 5px;
     padding: 5px;
     margin-right: 20px;
@@ -83,6 +84,11 @@ script{
 }
 
 /* Body */
+main{
+    align-self: center;
+    max-width: 850px;
+}
+
 project{
     margin: 20px 20px 0 20px;
 }
@@ -96,7 +102,15 @@ project:first-child{
     text-decoration-color: var(--darktext);
 }
 
+.project-example{
+    align-self: center;
+    max-width: 462px;
+    max-height: 447px;
+}
+
 .feedback{
+    align-self: center;
+    margin-top: 10px;
     text-decoration: none;
     text-align: center;
     width: 150px;
